CRUD for posts and categories, added spatie/laravel-markdown

--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
         "sass": "^1.56.1",
         "vite": "^3.0.0",
         "vue": "^3.2.37"
+    },
+    "dependencies": {
+        "shiki": "^0.12.1"
     }
 }
