--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.1",
+        "spatie/laravel-markdown": "^2.2",
         "spatie/laravel-permission": "^5.8"
     },
     "require-dev": {
