--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "vue": "^3.2.37"
     },
     "dependencies": {
+        "dropzone": "^6.0.0-beta.2",
         "shiki": "^0.12.1"
     }
 }
