--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "socialiteproviders/discord": "^4.1",
         "socialiteproviders/zoho": "^4.1",
         "spatie/laravel-markdown": "^2.2",
-        "spatie/laravel-permission": "^5.8"
+        "spatie/laravel-permission": "^5.8",
+      "ext-curl": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
