--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -4,6 +4,8 @@ server {
     return 301 https://www.freshcrafting.com$request_uri;
 }
 
+client_max_body_size 50M;
+
 server {
     listen 443 ssl;
     server_name freshcrafting.com www.freshcrafting.com;
