--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     volumes:
       - shared-data:/var/www
       - laravel-storage:/var/www/storage
+      - ./fpm/:/etc/php/8.1/fpm/
     networks:
       - freshcraft
 
@@ -38,6 +39,6 @@ networks:
     driver: bridge
 
 volumes:
-  shared-data: 
+  shared-data:
   laravel-storage:
 
