--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     volumes:
       - shared-data:/var/www
       - laravel-storage:/var/www/storage
-      - ./fpm:/etc/php/8.1/fpm
+      - ${PWD}/fpm/php.ini:/etc/php/8.1/fpm/php.ini
     networks:
       - freshcraft
 
