--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,9 @@ services:
     volumes:
       - shared-data:/var/www
       - laravel-storage:/var/www/storage
-      - ${PWD}/fpm/php.ini:/etc/php/8.1/fpm/php.ini
+      - type: bind
+        source: ./fpm/php.ini
+        target: /etc/php/8.1/fpm/php.ini
     networks:
       - freshcraft
 
