--- a/package.json
+++ b/package.json
@@ -7,16 +7,19 @@
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
         "@vitejs/plugin-vue": "^3.0.1",
+        "autoprefixer": "^10.4.14",
         "axios": "^1.1.2",
         "bootstrap": "^5.2.3",
         "laravel-vite-plugin": "^0.6.0",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
+        "postcss": "^8.4.21",
         "sass": "^1.56.1",
+        "tailwindcss": "^3.2.7",
         "vite": "^3.0.0",
         "vue": "^3.2.37"
     },
     "dependencies": {
+        "@tailwindcss/forms": "^0.5.3",
         "dropzone": "^6.0.0-beta.2",
         "shiki": "^0.12.1"
     }
